# qimchi

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  qimchi.pro
OCVCameraQML/: ocvcamera.cpp  ocvcamera.h  ocvcameraqml.pro  ocvcameraqml_plugin.cpp  ocvcameraqml_plugin.h  qmldir
chilitags/: CMakeLists.txt  README  README.md  chilitags.pro  chilitags_plugin.cpp  chilitags_plugin.h  chilitagsdetection.cpp  chilitagsdetection.h  chilitagsobject.cpp  chilitagsobject.h  chilitagsplugin.cpp  chilitagsplugin.h  chilitagssurface.cpp  chilitagssurface.h  qmldir  transform.cpp  transform.h
chilitags-demo/: Box.qml  BoxComponent.qml  BoxFunction.qml  BoxRadical.qml  CMakeLists.txt  CardBox.qml  Characters.qml  Component.qml  ComponentBox.qml  ComponentSelection.qml  ConstructionBox.qml  Coordinates.js  ExerciseBlue1.qml  ExerciseBlue2.qml  ExerciseBlue3.qml  ExerciseEmptyTemplate.qml  ExerciseRed1.qml  ExerciseRed2.qml  ExerciseRed3.qml  ExerciseSelector.qml  ExerciseYellow1.qml  ExerciseYellow2.qml  ExerciseYellow3.qml  Global.js  HintBox.qml  MyComponent.qml  MyItem.qml  MyRadical.qml  Omnibox.qml  README  README.md  RadicalBox.qml  RadicalSelection.qml  StringEn.js  StringFr.js  chilitags-demo.pro  fileio.cpp  main.cpp  main.qml  qml.qrc  (+1 more)
chilitags-projection/: README  main.qml
pgrcameraqml/: cameraloop.cpp  cameraloop.h  pgrcamera.cpp  pgrcamera.h  pgrcamera.h.autosave  pgrcameraqml.pro  pgrcameraqml_plugin.cpp  pgrcameraqml_plugin.h  qmldir
photobooth/: main.cpp  main.qml  qml.qrc
print/: imageprinter.cpp  imageprinter.h  print.pro  printplugin.cpp  printplugin.h  qmldir
samples/: README.md
samples/chilitags-detection3d/: README.md
samples/chilitags-detection3d-mesh/: README.md  chilitags-detection3d-mesh.pro  qml.qrc
samples/chilitags-detection3d-mesh/models/: suzanne.dae
samples/chilitags-detection3d-mesh/src/: main.qml
samples/chilitags-detection3d/src/: main.qml
samples/chilitags-imu-gui/: chilitags-imu-gui.pro
samples/chilitags-imu-gui/src/: main.qml
samples/chilitags-projection/: qml.qrc
testOCV/: main.cpp  main.qml  testOCV.pro
utils/: record-screen.sh
